--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <!-- Custom -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
   </head>
@@ -27,7 +27,7 @@
     </header>
 
     <section id="kontakt">
-      <div id="presentation" class="subsection text-justify">
+      <div id="presentation" class="subsection">
         <h1>Newmans VVS</h1>
         <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby med omnejd.</p>
         <img src="img/comfort-logo12.jpg" id="comfort-logo">
