--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <div id="presentation" class="subsection">
         <h1>Newmans VVS</h1>
         <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby med omnejd.</p>
+
+        <iframe width="100%" height="100px" frameborder="0" src="http://gulasidorna.eniro.se/query?what=review_widget&s=large&bg=white&bc=white&bs=1&locale=sv_SE&i=50916590"></iframe>
+
         <img src="img/comfort-logo12.jpg" id="comfort-logo">
       </div>
 
@@ -37,13 +40,13 @@
         <h2>Kontakt</h2>
         <p>
         <b>Newmans VVS</b><br>
-        Ebbarpsvägen 10<br>
-        28342 Osby<br>
+        Fabriksgatan 4<br>
+        283 31 Osby<br>
 
         Tel: 047913441<br>
         E-post: info@newmansvvs.se <br>
         </p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2114.2690297536565!2d14.002618515713548!3d56.378210451050165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46514c60ea4b7bef%3A0x5dfa223276387e9a!2sEbbarpsv%C3%A4gen+10%2C+283+42+Osby!5e1!3m2!1ssv!2sse!4v1492680283580" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2114.151906964283!2d13.99076871571365!3d56.38032095088624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46514c6866bcef8d%3A0xa6e546bac1fba5c7!2sNewmans+VVS+AB!5e1!3m2!1ssv!2sse!4v1492709538744>" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </section>
 
