--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Newmans VVS</h1>
         <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby med omnejd.</p>
 
-        <iframe width="100%" height="100px" frameborder="0" src="http://gulasidorna.eniro.se/query?what=review_widget&s=large&bg=white&bc=white&bs=1&locale=sv_SE&i=50916590"></iframe>
+        <iframe width="100%" height="100px" frameborder="0" src="https://gulasidorna.eniro.se/query?what=review_widget&s=large&bg=white&bc=white&bs=1&locale=sv_SE&i=50916590"></iframe>
 
         <img src="img/comfort-logo12.jpg" id="comfort-logo">
       </div>
