--- a/index.html
+++ b/index.html
@@ -52,26 +52,44 @@
 
     <section id="medarbetare">
       <div class="subsection profile">
-        <img src="img/stock_person1.jpg" class="img-circle profile">
+        <img src="img/personal/1.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Adam</b><br>
-          070-xxxxxxxxxx
+          <b></b><br>
         </p>
       </div>
 
       <div class="subsection profile">
-        <img src="img/stock_person2.jpg" class="img-circle profile">
+        <img src="img/personal/2.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Bertil</b><br>
-          070-xxxxxxxxxx
+          <b></b><br>
         </p>
       </div>
 
       <div class="subsection profile">
-        <img src="img/stock_person3.jpg" class="img-circle profile">
+        <img src="img/personal/3.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Cesar</b><br>
-          070-xxxxxxxxxx
+          <b></b><br>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/4.jpg" class="img-circle profile">
+        <p class="profile">
+          <b></b><br>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/5.jpg" class="img-circle profile">
+        <p class="profile">
+          <b></b><br>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/6.jpg" class="img-circle profile">
+        <p class="profile">
+          <b></b><br>
         </p>
       </div>
     </section>
