--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img class="logo" src="img/newmans_color_circle.png">
-      </div>
+      &nbsp;
     </header>
-
+    <div class="logo">
+      <img class="logo" src="img/newmans_color_circle.png">
+    </div>
     <section id="kontakt">
       <div id="presentation" class="subsection">
         <h1>Newmans VVS</h1>
@@ -42,11 +42,12 @@
         <b>Newmans VVS</b><br>
         Fabriksgatan 4<br>
         283 31 Osby<br>
-
-        Tel: 047913441<br>
-        E-post: info@newmansvvs.se <br>
         </p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2114.151906964283!2d13.99076871571365!3d56.38032095088624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46514c6866bcef8d%3A0xa6e546bac1fba5c7!2sNewmans+VVS+AB!5e1!3m2!1ssv!2sse!4v1492709538744>" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+        <p class="significant">Ring oss på <a href="tel:047913441">0479 1344</a></p>
+        <p class="significant"><a href="mailto:info@newmansvvs.se">info@newmansvvs.se</a></p>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2114.151906964283!2d13.99076871571365!3d56.38032095088624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46514c6866bcef8d%3A0xa6e546bac1fba5c7!2sNewmans+VVS+AB!5e1!3m2!1ssv!2sse!4v1492709538744>" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </section>
 
@@ -102,8 +103,8 @@
     </section>
 
     <footer>
-      <div class="subsection">
-        Design av MORÄN
+      <div class="subsection ">
+        <img class="moraen" src="img/moraen.png">
       </div>
 
     </footer>
