--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       &nbsp;
     </header>
     <div class="logo">
-      <img class="logo" src="img/newmans_color_circle.png">
+      <img class="logo" src="img/newmans_logo_blue.png">
     </div>
     <section id="kontakt">
       <div id="presentation" class="subsection">
