--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <footer>
       <div class="subsection ">
-        <img class="moraen" src="img/moraen.png">
+        <img class="moraen" src="img/moraen_invert.png">
       </div>
 
     </footer>
