--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       &nbsp;
     </header>
     <div class="logo">
-      <img class="logo" src="img/newmans_logo_blue.png">
+      <img class="logo" src="img/newmans_logo_blue.png" alt="Newmans VVS">
     </div>
     <section id="kontakt">
       <div id="presentation" class="subsection">
         <h1>Newmans VVS</h1>
         <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby med omnejd.</p>
 
-        <iframe width="100%" height="100px" frameborder="0" src="https://gulasidorna.eniro.se/query?what=review_widget&s=large&bg=white&bc=white&bs=1&locale=sv_SE&i=50916590"></iframe>
 
-        <img src="img/comfort-logo12.jpg" id="comfort-logo">
+
+        <img src="img/comfort-logo12.jpg" id="comfort-logo" alt="Comfort">
       </div>
 
       <div id="kontaktinfo" class="subsection text-right">
@@ -98,15 +98,14 @@
     <section id="leverantorer">
       <div class="subsection">
         <h2>Leverantörer</h2>
-        <img src="img/leverantorer.png" width="100%">
+        <img src="img/leverantorer.png" width="100%" alt="AGA, Aspen, Bosch, Callidus, CanVac, Coram, Dansani, Demerex, Dryson, FM Mattsson, Fresh, Geberit, Golvabia, Grohe, Gustabsberg, Hozelock, IDO, IFÖ, Incline, INR, ITT, KAN, Kima, Kinnan, Leakomatic, Leijma, LK, Miller, Mora, Mulltoa, Nibe, Nordhem, Noro, Purmo, Purus, Robota Pumpar, Smedbo, Stele, Svedbergs, TA, Tapwell, Thermopanel, Tylö, Uponor, Vedum, Villeroy & Boch, Wilo">
       </div>
     </section>
 
     <footer>
-      <div class="subsection ">
-        <img class="moraen" src="img/moraen_invert.png">
+      <div class="subsection moraen">
+        <a href="http://morän.se" target="_blank"><img class="moraen" src="img/moraen_invert.png" alt="Design av Morän"></a>
       </div>
-
     </footer>
 
     <!-- Google Analytics -->
