--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <title>Newmans VVS</title>
 
     <!-- Bootstrap -->
@@ -13,6 +16,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+      <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/bad28dc89c.js"></script>
 
     <!-- Custom -->
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One|Open+Sans" rel="stylesheet">
@@ -31,9 +36,10 @@
         <h1>Newmans VVS</h1>
         <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby med omnejd.</p>
 
+        <p><i class="fa fa-facebook-square" aria-hidden="true"></i> <a href="https://www.facebook.com/newmansosby" title="@newmansosby på Facebook" target="_blank">https://www.facebook.com/<b>newmansosby</b></a></p>
+        <p><i class="fa fa-instagram" aria-hidden="true"></i> <a href="https://www.instagram.com/newmansvvs/" title="@newmansvvs på Instagram" target="_blank">https://www.instagram.com/<b>newmansvvs</b></a></p>
 
-
-        <img src="img/comfort-logo12.jpg" id="comfort-logo" alt="Comfort">
+        <p><img src="img/comfort-logo12.jpg" id="comfort-logo" alt="Comfort"></p>
       </div>
 
       <div id="kontaktinfo" class="subsection text-right">
@@ -43,6 +49,7 @@
         Fabriksgatan 4<br>
         283 31 Osby<br>
         </p>
+
 
         <p class="significant">Ring oss på <a href="tel:047913441">0479 1344</a></p>
         <p class="significant"><a href="mailto:info@newmansvvs.se">info@newmansvvs.se</a></p>
