--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <h1>Newmans VVS</h1>
         <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby med omnejd.</p>
 
-        <p><i class="fa fa-facebook-square" aria-hidden="true"></i> <a href="https://www.facebook.com/newmansosby" title="@newmansosby på Facebook" target="_blank">https://www.facebook.com/<b>newmansosby</b></a></p>
-        <p><i class="fa fa-instagram" aria-hidden="true"></i> <a href="https://www.instagram.com/newmansvvs/" title="@newmansvvs på Instagram" target="_blank">https://www.instagram.com/<b>newmansvvs</b></a></p>
+        <p><i class="fa fa-facebook-square" aria-hidden="true"></i> <a href="https://www.facebook.com/newmansosby" title="@newmansosby på Facebook" target="_blank"><span class="hide_on_mobile">https://www.facebook.com/</span><b>newmansosby</b></a></p>
+        <p><i class="fa fa-instagram" aria-hidden="true"></i> <a href="https://www.instagram.com/newmansvvs/" title="@newmansvvs på Instagram" target="_blank"><span class="hide_on_mobile">https://www.instagram.com/</span><b>newmansvvs</b></a></p>
 
         <p><img src="img/comfort-logo12.jpg" id="comfort-logo" alt="Comfort"></p>
       </div>
@@ -102,7 +102,7 @@
       </div>
     </section>
 
-    <section id="leverantorer">
+    <section id="leverantorer" class="hide_on_mobile">
       <div class="subsection">
         <h2>Leverantörer</h2>
         <img src="img/leverantorer.png" width="100%" alt="AGA, Aspen, Bosch, Callidus, CanVac, Coram, Dansani, Demerex, Dryson, FM Mattsson, Fresh, Geberit, Golvabia, Grohe, Gustabsberg, Hozelock, IDO, IFÖ, Incline, INR, ITT, KAN, Kima, Kinnan, Leakomatic, Leijma, LK, Miller, Mora, Mulltoa, Nibe, Nordhem, Noro, Purmo, Purus, Robota Pumpar, Smedbo, Stele, Svedbergs, TA, Tapwell, Thermopanel, Tylö, Uponor, Vedum, Villeroy & Boch, Wilo">
