--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <h1>Newmans VVS</h1>
         <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby med omnejd.</p>
 
-        <p><i class="fa fa-facebook-square" aria-hidden="true"></i> <a href="https://www.facebook.com/newmansosby" title="@newmansosby på Facebook" target="_blank"><span class="hide_on_mobile">https://www.facebook.com/</span><b>newmansosby</b></a></p>
-        <p><i class="fa fa-instagram" aria-hidden="true"></i> <a href="https://www.instagram.com/newmansvvs/" title="@newmansvvs på Instagram" target="_blank"><span class="hide_on_mobile">https://www.instagram.com/</span><b>newmansvvs</b></a></p>
+        <p><a href="https://www.facebook.com/newmansosby" title="@newmansosby på Facebook" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> <b>newmansosby</b></a></p>
+        <p><a href="https://www.instagram.com/newmansvvs/" title="@newmansvvs på Instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> <b>newmansvvs</b></a></p>
 
         <p><img src="img/comfort-logo12.jpg" id="comfort-logo" alt="Comfort"></p>
       </div>
@@ -51,7 +51,7 @@
         </p>
 
 
-        <p class="significant">Ring oss på <a href="tel:047913441">0479 1344</a></p>
+        <p class="significant">Ring oss på <a href="tel:047913441">0479-13441</a></p>
         <p class="significant"><a href="mailto:info@newmansvvs.se">info@newmansvvs.se</a></p>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2114.151906964283!2d13.99076871571365!3d56.38032095088624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46514c6866bcef8d%3A0xa6e546bac1fba5c7!2sNewmans+VVS+AB!5e1!3m2!1ssv!2sse!4v1492709538744>" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -59,47 +59,125 @@
     </section>
 
     <section id="medarbetare">
+
       <div class="subsection profile">
-        <img src="img/personal/1.jpg" class="img-circle profile">
+        <img src="img/personal/martin_persson.jpg" class="img-circle profile">
         <p class="profile">
-          <b></b><br>
+          <b>Martin Persson</b><br>
+          <i>VD</i><br>
+           <a href="tel:0709446206">0709446206</a><br>
+          <a href="mailto:martin@newmansvvs.se">martin@newmansvvs.se </a>
         </p>
       </div>
 
       <div class="subsection profile">
-        <img src="img/personal/2.jpg" class="img-circle profile">
+        <img src="img/personal/mikael_nilsson.jpg" class="img-circle profile">
         <p class="profile">
-          <b></b><br>
+          <b>Mikael Nilsson</b><br>
+          <i>Arbetsledare</i><br>
+           <a href="tel:0709446204">0709446204</a>	<br>
+          <a href="mailto:mikael@newmansvvs.se">mikael@newmansvvs.se</a>
         </p>
       </div>
 
       <div class="subsection profile">
-        <img src="img/personal/3.jpg" class="img-circle profile">
+        <img src="img/personal/niklas_lindquist.jpg" class="img-circle profile">
         <p class="profile">
-          <b></b><br>
+          <b>Niklas Lindquist</b><br>
+          <i>Ledande Montör</i><br>
+          <a href="tel:0735446214">0735446214</a>		<br>
+          <a href="mailto:niklas@newmansvvs.se">niklas@newmansvvs.se</a>
         </p>
       </div>
 
       <div class="subsection profile">
-        <img src="img/personal/4.jpg" class="img-circle profile">
+        <img src="img/personal/niklas_tano.jpg" class="img-circle profile">
         <p class="profile">
-          <b></b><br>
+          <b>Niklas Tano</b><br>
+          <i>Montör</i><br>
+           <a href="tel:0733689599">0733689599</a>		<br>
+          <a href="mailto:niklas.t@newmansvvs.se">niklas.t@newmansvvs.se</a>
         </p>
       </div>
 
       <div class="subsection profile">
-        <img src="img/personal/5.jpg" class="img-circle profile">
+        <img src="img/personal/gustaf_lindblad.jpg" class="img-circle profile">
         <p class="profile">
-          <b></b><br>
+          <b>Gustaf Lindblad</b><br>
+          <i>Montör</i><br>
+           <a href="tel:0733574490">0733574490</a><br>
+          <a href="mailto:gustaf.l@newmansvvs.se">gustaf.l@newmansvvs.se</a>
         </p>
       </div>
 
       <div class="subsection profile">
-        <img src="img/personal/6.jpg" class="img-circle profile">
+        <img src="img/personal/emil_nilsson.jpg" class="img-circle profile">
         <p class="profile">
-          <b></b><br>
+          <b>Emil Nilsson</b><br>
+          <i>Montör</i><br>
+           <a href="tel:0709446205">0709446205</a><br>
+          <a href="mailto:emil.n@newmansvvs.se">emil.n@newmansvvs.se</a>
         </p>
       </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/jonathan_rubin.jpg" class="img-circle profile">
+        <p class="profile">
+          <b>Jonathan Rubin</b><br>
+          <i>Montör</i><br>
+           <a href="tel:0701436710">0701436710</a><br>
+          <a href="mailto:jonathan.r@newmansvvs.se">jonathan.r@newmansvvs.se</a>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/andreas_jonsson.jpg" class="img-circle profile">
+        <p class="profile">
+          <b>Andreas Jönsson</b><br>
+          <i>Montör</i><br>
+           <a href="tel:0703666005">0703666005</a><br>
+          <a href="mailto:andreas.j@newmansvvs.se">andreas.j@newmansvvs.se</a>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/pontus_hallengren.jpg" class="img-circle profile">
+        <p class="profile">
+          <b>Pontus Hallengren</b><br>
+          <i>Montör</i><br>
+          <a href="tel:0734270818">0734270818</a> <br>
+          <a href="mailto:"></a>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/gustav_karlsson.jpg" class="img-circle profile">
+        <p class="profile">
+          <b>Gustav Karlsson</b><br>
+          <i>Montör</i><br>
+           <a href="tel:0709446203">0709446203</a> <br>
+           <a href="mailto:"></a>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/anna_maj_persson.jpg" class="img-circle profile">
+        <p class="profile">
+          <b>Anna Maj Persson</b><br>
+          <i>Ekonomi</i><br>
+           <a href="tel:047913441">0479-13441</a><br>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/hans_persson.jpg" class="img-circle profile">
+        <p class="profile">
+          <b>Hans Persson</b><br>
+          <i>Spolbil- och maskinansvarig  </i><br>
+           <a href="tel:0706737097">0706737097</a><br>
+        </p>
+      </div>
+
     </section>
 
     <section id="leverantorer" class="hide_on_mobile">
