Thermia och orter

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     <section id="kontakt">
       <div id="presentation" class="subsection">
         <h1>Newmans VVS</h1>
-        <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby med omnejd.</p>
+        <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby <span class="orter">(och i Lönsboda, Killeberg, Visseltofta, Örkened, Loshult, Knislinge, Broby, Glimåkra, Sibbhult, Hanaskog, Immeln, Hjärsås, Emmilslöv, Gryt, Östra Broby, Hässleholm, Tyringe, Vinslöv, Bjärnum, Sösdala, Vittsjö, Hästveda, Sjörröd, Tormestorp, Stoby, Vankiva, Ballingslöv, Emmaljunga, Röke, Mala, Älmhult, Diö, Liatorp, Eneryda, Delary, Markaryd, Strömnäsbruk, Traryd och Timsfors med).</span></p>
 
         <p><a href="https://www.facebook.com/newmansosby" title="@newmansosby på Facebook" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> <b>newmansosby</b></a></p>
         <p><a href="https://www.instagram.com/newmansvvs/" title="@newmansvvs på Instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> <b>newmansvvs</b></a></p>
 
-        <p><img src="img/comfort-logo12.jpg" id="comfort-logo" alt="Comfort"></p>
+        <p class="reseller-logo" ><a href="http://www.thermia.se/" target="_blank"><img src="img/thermia-logotyp.png" class="reseller-logo" alt="Thermia"></a>
+        <a href="http://comfort.se" target="_blank"><img src="img/comfort-logotyp.jpg" class="reseller-logo" alt="Comfort"></a></p>
+
       </div>
 
       <div id="kontaktinfo" class="subsection text-right">
@@ -63,118 +65,141 @@
       <div class="subsection profile">
         <img src="img/personal/martin_persson.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Martin Persson</b><br>
-          <i>VD</i><br>
-           <a href="tel:0709446206">0709446206</a><br>
-          <a href="mailto:martin@newmansvvs.se">martin@newmansvvs.se </a>
+          <b class="profile">Martin Persson</b><br>
+          <i>VD</i>
+          <p>
+          <a href="mailto:martin@newmansvvs.se">martin@newmansvvs.se</a><br>
+          <a href="tel:0709446206">0709446206</a>
+        </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/mikael_nilsson.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Mikael Nilsson</b><br>
-          <i>Arbetsledare</i><br>
-           <a href="tel:0709446204">0709446204</a>	<br>
-          <a href="mailto:mikael@newmansvvs.se">mikael@newmansvvs.se</a>
+          <b class="profile">Mikael Nilsson</b><br>
+          <i class="profile">Arbetsledare</i>
+            <p>
+          <a href="mailto:mikael@newmansvvs.se">mikael@newmansvvs.se</a><br>
+           <a href="tel:0709446204">0709446204</a>
+          </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/niklas_lindquist.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Niklas Lindquist</b><br>
-          <i>Ledande Montör</i><br>
-          <a href="tel:0735446214">0735446214</a>		<br>
-          <a href="mailto:niklas@newmansvvs.se">niklas@newmansvvs.se</a>
+          <b class="profile">Niklas Lindquist</b><br>
+          <i class="profile">Ledande Montör</i>
+            <p>
+          <a href="mailto:niklas@newmansvvs.se">niklas@newmansvvs.se</a><br>
+          <a href="tel:0735446214">0735446214</a>
+          </p>
         </p>
       </div>
 
       <div class="subsection profile">
-        <img src="img/personal/niklas_tano.jpg" class="img-circle profile">
+        <img src="img/personal/niklas_tano.jpg" class="img-circle profile"><br>
         <p class="profile">
-          <b>Niklas Tano</b><br>
-          <i>Montör</i><br>
-           <a href="tel:0733689599">0733689599</a>		<br>
-          <a href="mailto:niklas.t@newmansvvs.se">niklas.t@newmansvvs.se</a>
+          <b class="profile">Niklas Tano</b><br>
+          <i class="profile">Montör</i>
+            <p>
+          <a href="mailto:niklas.t@newmansvvs.se">niklas.t@newmansvvs.se</a><br>
+           <a href="tel:0733689599">0733689599</a>
+          </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/gustaf_lindblad.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Gustaf Lindblad</b><br>
-          <i>Montör</i><br>
-           <a href="tel:0733574490">0733574490</a><br>
-          <a href="mailto:gustaf.l@newmansvvs.se">gustaf.l@newmansvvs.se</a>
+          <b class="profile">Gustaf Lindblad</b><br>
+          <i class="profile">Montör</i>
+          <p>
+          <a href="mailto:gustaf.l@newmansvvs.se">gustaf.l@newmansvvs.se</a><br>
+           <a href="tel:0733574490">0733574490</a>
+          </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/emil_nilsson.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Emil Nilsson</b><br>
-          <i>Montör</i><br>
-           <a href="tel:0709446205">0709446205</a><br>
-          <a href="mailto:emil.n@newmansvvs.se">emil.n@newmansvvs.se</a>
+          <b class="profile">Emil Nilsson</b><br>
+          <i class="profile">Montör</i>
+            <p>
+          <a href="mailto:emil.n@newmansvvs.se">emil.n@newmansvvs.se</a><br>
+           <a href="tel:0709446205">0709446205</a>
+           </p>
+
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/jonathan_rubin.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Jonathan Rubin</b><br>
-          <i>Montör</i><br>
-           <a href="tel:0701436710">0701436710</a><br>
-          <a href="mailto:jonathan.r@newmansvvs.se">jonathan.r@newmansvvs.se</a>
+          <b class="profile">Jonathan Rubin</b><br>
+          <i class="profile">Montör</i>
+            <p>
+          <a href="mailto:jonathan.r@newmansvvs.se">jonathan.r@newmansvvs.se</a><br>
+           <a href="tel:0701436710">0701436710</a>
+          </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/andreas_jonsson.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Andreas Jönsson</b><br>
-          <i>Montör</i><br>
-           <a href="tel:0703666005">0703666005</a><br>
-          <a href="mailto:andreas.j@newmansvvs.se">andreas.j@newmansvvs.se</a>
+          <b class="profile">Andreas Jönsson</b><br>
+          <i class="profile">Montör</i>
+          <p>
+          <a href="mailto:andreas.j@newmansvvs.se">andreas.j@newmansvvs.se</a><br>
+           <a href="tel:0703666005">0703666005</a>
+          </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/pontus_hallengren.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Pontus Hallengren</b><br>
-          <i>Montör</i><br>
-          <a href="tel:0734270818">0734270818</a> <br>
-          <a href="mailto:"></a>
+          <b class="profile">Pontus Hallengren</b><br>
+          <i class="profile">Montör</i>
+            <p>
+          <a href="tel:0734270818">0734270818</a>
+          </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/gustav_karlsson.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Gustav Karlsson</b><br>
-          <i>Montör</i><br>
-           <a href="tel:0709446203">0709446203</a> <br>
-           <a href="mailto:"></a>
+          <b class="profile">Gustav Karlsson</b><br>
+          <i class="profile">Montör</i>
+            <p>
+           <a href="tel:0709446203">0709446203</a>
+           </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/anna_maj_persson.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Anna Maj Persson</b><br>
-          <i>Ekonomi</i><br>
-           <a href="tel:047913441">0479-13441</a><br>
+          <b class="profile">Anna Maj Persson</b><br>
+          <i class="profile">Ekonomi</i>
+          <p>
+           <a href="tel:047913441">0479-13441</a>
+           </p>
         </p>
       </div>
 
       <div class="subsection profile">
         <img src="img/personal/hans_persson.jpg" class="img-circle profile">
         <p class="profile">
-          <b>Hans Persson</b><br>
-          <i>Spolbil- och maskinansvarig  </i><br>
-           <a href="tel:0706737097">0706737097</a><br>
+          <b class="profile">Hans Persson</b><br>
+          <i class="profile">Spolbil- och maskinansvarig  </i>
+          <p>
+           <a href="tel:0706737097">0706737097</a>
+         </p>
         </p>
       </div>
 
