--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
         <h1>Newmans VVS</h1>
         <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby <span class="orter">(och i Lönsboda, Killeberg, Visseltofta, Örkened, Loshult, Knislinge, Broby, Glimåkra, Sibbhult, Hanaskog, Immeln, Hjärsås, Emmilslöv, Gryt, Östra Broby, Hässleholm, Tyringe, Vinslöv, Bjärnum, Sösdala, Vittsjö, Hästveda, Sjörröd, Tormestorp, Stoby, Vankiva, Ballingslöv, Emmaljunga, Röke, Mala, Älmhult, Diö, Liatorp, Eneryda, Delary, Markaryd, Strömnäsbruk, Traryd och Timsfors med).</span></p>
 
-        <p><a href="https://www.facebook.com/newmansosby" title="@newmansosby på Facebook" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> <b>newmansosby</b></a></p>
-        <p><a href="https://www.instagram.com/newmansvvs/" title="@newmansvvs på Instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> <b>newmansvvs</b></a></p>
-
         <p class="reseller-logo" ><a href="http://www.thermia.se/" target="_blank"><img src="img/thermia-logotyp.png" class="reseller-logo" alt="Thermia"></a>
         <a href="http://comfort.se" target="_blank"><img src="img/comfort-logotyp.jpg" class="reseller-logo" alt="Comfort"></a></p>
 
@@ -55,6 +52,9 @@
 
         <p class="significant">Ring oss på <a href="tel:047913441">0479-13441</a></p>
         <p class="significant"><a href="mailto:info@newmansvvs.se">info@newmansvvs.se</a></p>
+
+        <p class="small"><a href="https://www.facebook.com/newmansosby" title="@newmansosby på Facebook" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> <b>newmansosby</b></a></p>
+        <p class="small"><a href="https://www.instagram.com/newmansvvs/" title="@newmansvvs på Instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> <b>newmansvvs</b></a></p>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2114.151906964283!2d13.99076871571365!3d56.38032095088624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46514c6866bcef8d%3A0xa6e546bac1fba5c7!2sNewmans+VVS+AB!5e1!3m2!1ssv!2sse!4v1492709538744>" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
