--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="kontakt">
       <div id="presentation" class="subsection">
         <h1>Newmans VVS</h1>
-        <p>Vi gör installationer och service av badrum, värmepumpar, pannor, fjällvärmare, radioatorer, golvvärme, solvärmelösningar, industriarbeten med mera i Osby <span class="orter">(och i Lönsboda, Killeberg, Visseltofta, Örkened, Loshult, Knislinge, Broby, Glimåkra, Sibbhult, Hanaskog, Immeln, Hjärsås, Emmilslöv, Gryt, Östra Broby, Hässleholm, Tyringe, Vinslöv, Bjärnum, Sösdala, Vittsjö, Hästveda, Sjörröd, Tormestorp, Stoby, Vankiva, Ballingslöv, Emmaljunga, Röke, Mala, Älmhult, Diö, Liatorp, Eneryda, Delary, Markaryd, Strömnäsbruk, Traryd och Timsfors med).</span></p>
+        <p>Anlita professionella hantverkare om du vill känna dig trygg med att arbetet utförs med kvalitet! Förutom stora industriarbeten utför vi på Newmans VVS även installationer och service av bland annat badrum, värmepumpar, värmepannor, fjärrvärme och solvärme åt privatpersoner i Osby <span class="orter">(och i Lönsboda, Killeberg, Visseltofta, Örkened, Loshult, Knislinge, Broby, Glimåkra, Sibbhult, Hanaskog, Immeln, Hjärsås, Emmilslöv, Gryt, Östra Broby, Hässleholm, Tyringe, Vinslöv, Bjärnum, Sösdala, Vittsjö, Hästveda, Sjörröd, Tormestorp, Stoby, Vankiva, Ballingslöv, Emmaljunga, Röke, Mala, Älmhult, Diö, Liatorp, Eneryda, Delary, Markaryd, Strömnäsbruk, Traryd och Timsfors med).</span></p>
 
         <p class="reseller-logo" ><a href="http://www.thermia.se/" target="_blank"><img src="img/thermia-logotyp.png" class="reseller-logo" alt="Thermia"></a>
         <a href="http://comfort.se" target="_blank"><img src="img/comfort-logotyp.jpg" class="reseller-logo" alt="Comfort"></a></p>
