--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <section id="kontakt">
       <div id="presentation" class="subsection">
         <h1>Newmans VVS</h1>
-        <p>Anlita professionella hantverkare om du vill känna dig trygg med att arbetet utförs med kvalitet! Förutom stora industriarbeten utför vi på Newmans VVS även installationer och service av bland annat badrum, värmepumpar, värmepannor, fjärrvärme och solvärme åt privatpersoner i Osby <span class="orter">(och i Lönsboda, Killeberg, Visseltofta, Örkened, Loshult, Knislinge, Broby, Glimåkra, Sibbhult, Hanaskog, Immeln, Hjärsås, Emmilslöv, Gryt, Östra Broby, Hässleholm, Tyringe, Vinslöv, Bjärnum, Sösdala, Vittsjö, Hästveda, Sjörröd, Tormestorp, Stoby, Vankiva, Ballingslöv, Emmaljunga, Röke, Mala, Älmhult, Diö, Liatorp, Eneryda, Delary, Markaryd, Strömnäsbruk, Traryd och Timsfors med).</span></p>
+        <p class="ingress">Anlita professionella hantverkare om du vill känna dig trygg med att arbetet utförs med kvalitet! </p>
+
+        <p class="regular">Förutom stora industriarbeten utför vi på Newmans VVS även installationer och service av bland annat badrum, värmepumpar, värmepannor, fjärrvärme och solvärme åt privatpersoner i Osby <span class="orter">(och i Lönsboda, Killeberg, Visseltofta, Örkened, Loshult, Knislinge, Broby, Glimåkra, Sibbhult, Hanaskog, Immeln, Hjärsås, Emmilslöv, Gryt, Östra Broby, Hässleholm, Tyringe, Vinslöv, Bjärnum, Sösdala, Vittsjö, Hästveda, Sjörröd, Tormestorp, Stoby, Vankiva, Ballingslöv, Emmaljunga, Röke, Mala, Älmhult, Diö, Liatorp, Eneryda, Delary, Markaryd, Strömnäsbruk, Traryd och Timsfors med).</span></p>
 
         <p class="reseller-logo" ><a href="http://www.thermia.se/" target="_blank"><img src="img/thermia-logotyp.png" class="reseller-logo" alt="Thermia"></a>
         <a href="http://comfort.se" target="_blank"><img src="img/comfort-logotyp.jpg" class="reseller-logo" alt="Comfort"></a></p>
@@ -46,9 +48,11 @@
         <p>
         <b>Newmans VVS</b><br>
         Fabriksgatan 4<br>
-        283 31 Osby<br>
+        283 31 Osby
         </p>
 
+        <p class="small"><b>Butiken öppen<br>
+          onsdag till fredag, 13-17</b></p>
 
         <p class="significant">Ring oss på <a href="tel:047913441">0479-13441</a></p>
         <p class="significant"><a href="mailto:info@newmansvvs.se">info@newmansvvs.se</a></p>
