--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
     <footer>
       <div class="subsection moraen">
-        <a href="http://morän.se" target="_blank"><img class="moraen" src="img/moraen_invert.png" alt="Design av Morän"></a>
+        <a href="http://moraenn.se" target="_blank"><img class="moraen" src="img/moraen_logo_grunge.png" alt="Design av Morän"></a>
       </div>
     </footer>
 
