--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <img src="img/personal/niklas_lindquist.jpg" class="img-circle profile">
         <p class="profile">
           <b class="profile">Niklas Lindquist</b><br>
-          <i class="profile">Ledande Montör</i>
+          <i class="profile">Arbetsledare</i>
             <p>
           <a href="mailto:niklas@newmansvvs.se">niklas@newmansvvs.se</a><br>
           <a href="tel:0735446214">0735446214</a>
